code style fixes, isort, types
